# dive-into-machine-learning

./: README.md  compare_balances.py  erp_epm_reconciliation.py  requirements.txt  streamlit_app.py
backend/: README.md  pyproject.toml
backend/app/: bank_parser.py  config.py  database.py  invoice_parser.py  main.py  models.py  reconciliation.py  reminders.py
backend/tests/: conftest.py  test_parsers.py  test_reconciliation.py  test_reminders.py
finance/: erp_finance_analysis.py
indian-equity-research/: README.md  generate_report.py
scripts/: nse_stock_ma.py
