[project]
name = "whatsapp_collections_mvp"
version = "0.1.0"
description = "MVP backend for WhatsApp-first collections and reconciliation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
